// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a Badge control 1`] = `
<div
  className="badgeContainer normal test-class"
>
  Test Component
  <div
    className="ui-badge badge topRight normal"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "blue",
        "border": "solid 3px",
        "color": "red",
      }
    }
  >
    1
  </div>
</div>
`;

exports[`Test making the Badge control invisible 1`] = `
<div
  className="badgeContainer normal invisible"
>
  <div
    className="ui-badge badge topRight normal"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "white",
        "border": "solid 3px",
        "color": "red",
      }
    }
  >
    0
  </div>
</div>
`;

exports[`Test retrieval of Badge props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "counter": 0,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "id": "",
  "location": "topRight",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "onClick": [Function],
  "selected": false,
  "sizing": "normal",
  "style": Object {
    "backgroundColor": "white",
    "border": "solid 3px",
    "color": "red",
  },
  "suppress": false,
  "testing": true,
  "visible": true,
  "width": "",
}
`;

exports[`Test the disabling of a Badge control 1`] = `
<div
  className="badgeContainer normal disabled nohover"
>
  <div
    className="ui-badge badge topRight normal"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "white",
        "border": "solid 3px",
        "color": "red",
      }
    }
  >
    0
  </div>
</div>
`;
